fix(navbar): spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,12 @@ footer .social {
   padding-top: 30px;
   border: solid thin;
 }
+.navbar .links {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  gap: 18px;
+}
 .navbar .links a {
   text-decoration: none;
   font-size: 15px;
