--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -11,7 +11,9 @@
 $spacing-nav: calc((48 / $base-font-size-in-px) * 1rem);
 
 %navbar {
+  //Not sure best way to make more pronounced when bg color changes
   // background-color: rgba($brand-light, 0.1);
+  // text-shadow: 1px 1px 1px black;
   margin-left: auto;
   margin-right: auto;
   height: 90px;
@@ -23,18 +25,19 @@ $spacing-nav: calc((48 / $base-font-size-in-px) * 1rem);
   border-bottom: 1px solid;
   margin-bottom: $spacing-nav;
 
-  // text-shadow: 1px 1px 1px black;
   .logo {
     font-size: 1.25rem;
     padding-top: 30px;
     border: solid thin;
   }
   .links {
-    // color: $brand-primary;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    gap: 18px;
     a {
       text-decoration: none;
       font-size: 15px;
-      // color: $brand-dark;
     }
   }
 }
